# interpret_fair

./: .gitignore  LICENSE  README.md  __init__.py  part8.py  parts789.py  pyproject.toml
Data/: catboost_output.csv
assets/: cat_boost_model  supertree.html  supertree_own_model.html
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: Model1.ipynb  cat_boost_model  main.ipynb  own_model.ipynb  step_1&4_model_1.ipynb  step_1&4_model_2.ipynb  step_1_model_1.ipynb  step_1_model_2.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: __init__.py  cond_stat_parity.py  part8.py  pdp_ice.py  shap.py  statistical_parity_test.py  utils_step_1.py
