[tool.poetry]
name = "interpret_fair"
version = "0.1.0"
description = "Project for Course 03-algorthmic-fairness-and-interpretability"
authors = ["Antonio Roberto Ventura antonio.ventu@hotmail.it"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
shap = "^0.42.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
shap = "^0.42.0"
catboost = "^1.2.7"
XPER = "^0.0.88"
supertree = "^0.5.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
